RESOLVED FIXED282340
[css-masonry] Fix intrinsic-sizing-cols-004-mix1/2
https://bugs.webkit.org/show_bug.cgi?id=282340
Summary [css-masonry] Fix intrinsic-sizing-cols-004-mix1/2
Brandon
Reported 2024-10-30 10:19:29 PDT
During the stretch flexible tracks we need to take into account that indefinite items are also placed in each track. This was being ignored before, which can cause differences in flex size computations. Update mix1 test cases: Test 2: The "5 5" is set to a width of 2ch in the original test case. Test 6: An extra 5 was missing. Test 9: The last column should be ~3ch.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-10-30 10:19:56 PDT
Brandon
Comment 2 2024-10-30 10:24:15 PDT
EWS
Comment 3 2024-10-31 19:45:56 PDT
Committed 285993@main (3155098264ca): <https://commits.webkit.org/285993@main> Reviewed commits have been landed. Closing PR #35949 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.