[css-masonry] Fix intrinsic-sizing-cols-004-mix1/2 https://bugs.webkit.org/show_bug.cgi?id=282340 rdar://problem/138927036

Reviewed by Sammy Gill.

During the stretch flexible tracks we need to take into account that indefinite items are also placed in each track.
This was being ignored before, which can cause differences in flex size computations.

Update mix1 test cases:

Test 2:
The "5 5" is set to a width of 2ch in the original test case.

Test 6:
An extra 5 was missing.

Test 9:
The last column should be ~3ch.

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/masonry/tentative/intrinsic-sizing/masonry-intrinsic-sizing-cols-004-mix1-expected.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/masonry/tentative/intrinsic-sizing/masonry-intrinsic-sizing-cols-004-mix1-ref.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/masonry/tentative/intrinsic-sizing/masonry-intrinsic-sizing-cols-004-mix1.html:
* Source/WebCore/rendering/GridTrackSizingAlgorithm.cpp:
(WebCore::IndefiniteSizeStrategy::accumulateFlexFractionMasonry const):
(WebCore::IndefiniteSizeStrategy::findUsedFlexFraction const):

Canonical link: https://commits.webkit.org/285993@main